# MAKAsolve

./: .clang-format  .editorconfig  CMakeLists.txt  LICENSE  README.md  STYLE.md
.github/workflows/: clang-format.yml
cmake/: FindAmgX.cmake
doc/: proposal.tex  refs.bib
include/MAKAsolve/: Input.h  LinearSolver.h  ParallelSolver.h  Solver.h  SparseSolver.h  Timer.h
src/: CMakeLists.txt  CPULinearSolver.cc  Input.cc  LinearSolver.cc  MAKAsolve.cc  ParallelSolver.cu  Solver.cc  Solver.cu  SparseSolver.cu  Timer.cc
test/: CMakeLists.txt  empty.cc  load-mesh.cc  parallel-test.cc  partition-test.cc  read-input.cc  solver-test.cc  sparse-solver-test.cc  speed-test.cc  stiffness.cc  test-utils.cc  test_utils.cc  test_utils.h
test/data/: README.md  solve-data.rc  solve-stabilized.rc  square-stable.rc
